--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ header button i {
   position: relative;
   z-index: -1;
   margin-bottom: 40px;
+  
 }
 .landing img {
   width: 100%;
@@ -373,7 +374,7 @@ header button i {
     margin-bottom: 0px;
   }
   .landing img {
-    width: 120%;
+    height: 270px;
   }
   .text-area {
     top: 20px;
@@ -979,7 +980,14 @@ footer .container:last-of-type p:last-of-type {
 @media (max-width: 992px) {
   footer .container:last-of-type ul {
     margin-left: 0px;
+    justify-content: center;
+    margin-top:20px;
+    
   }
+  footer .container:last-of-type p{
+    margin: auto;
+  }
+
 }
 /* end footer */
 /* start contact Page */
